# ctr-sim

./: .gitattributes  .gitignore  README.md  pyproject.toml
ctr_sim/: __init__.py  backbone.py  material.py  robot.py  segment.py  solution.py  state.py  tube.py  types.py
ctr_sim/control/: __init__.py  jacobian.py  resolved_rate.py
ctr_sim/kinematics/: forward.py  transforms.py
ctr_sim/mechanics/: __init__.py  forward.py  integration.py  solver.py  torsion.py
ctr_sim/visualization/: __init__.py  plotting.py
docs/: design.md  roadmap.md
examples/: backbone_example.py  backbone_segments_example.py  forward_example.py  forward_kinematics_example.py  material_example.py  matlab_validation_case1.py  matlab_validation_case2.py  numerical_jacobian.py  resolved_rate_step.py  robot_example.py  torsion_example.py  transforms_example.py  tube_example.py  visualization_example.py
ros2_ws/src/ctr_teleop/: package.xml  setup.py
ros2_ws/src/ctr_teleop/ctr_teleop/: joy_receiver.py
tests/: conftest.py  test_backbone_segments.py  test_forward_kinematics.py  test_intervals.py  test_jacobian.py  test_material.py  test_resolved_rate.py  test_robot.py  test_tube.py
windows/: joy_sender.py
